Updating to work with WS3DProxy 0.0.7 and JDK 25